<resources>
    <string name="app_name">Agenda</string>
    <string name="login">Conectar con Google</string>
    <string name="empty"> </string>
    <string name="agenda_logo_description">logo de la aplicacion Agenda</string>
    <string name="google_logo_description">logo de la aplicacion Google</string>
    <string name="description_chains">Cadena de coneccion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
</resources>