<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Space
        android:id="@+id/spc_upperHalf"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/spc_lowerHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spc_lowerHalf"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spc_upperHalf" />

    <androidx.cardview.widget.CardView
        style="@style/cardPrimaryBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="82dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spc_upperHalf">

        <LinearLayout
            style="@style/primaryBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">

            <ImageView
                android:id="@+id/img_logoAgenda"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/agenda_logo_description"
                app:srcCompat="@drawable/ic_agenda"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/img_logoChain"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/description_chains"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:srcCompat="@drawable/img_chain" />

            <ImageView
                android:id="@+id/img_logoGoogle"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/google_logo_description"
                app:srcCompat="@drawable/ic_google" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/spc_lowerHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>