<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <Button
        android:id="@+id/btn_complete_event"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/sv_event_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="16dp"
            android:showDividers="middle">

            <TableRow
                android:id="@+id/tb_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textImeMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tb_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/description"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEventDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tag"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEventTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/icon"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEventIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/color"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEventColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>